<resources>
    <string name="app_name">SelfRhythm</string>
    <string name="full_app_name">Create Your Own Rhythm</string>
    <string name="home_item_description">Today</string>
    <string name="calendar_item_description">Calendar</string>
    <string name="week_manage_item_description">Weeks</string>
    <string name="settings_item_description">Settings</string>
    <string name="help_description">Help</string>
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="sunday">Sunday</string>
    <string name="monday_short">mon</string>
    <string name="tuesday_short">tue</string>
    <string name="wednesday_short">wed</string>
    <string name="thursday_short">thu</string>
    <string name="friday_short">fri</string>
    <string name="saturday_short">sat</string>
    <string name="sunday_short">sun</string>
    <string name="edit_item">edit</string>
    <string name="delete_item">delete</string>
    <string name="add_item">add</string>
    <string name="edit_item_up">Edit</string>
    <string name="delete_item_up">Delete</string>
    <string name="add_item_up">Add</string>
    <string name="title_hint">Title</string>
    <string name="time_text">Time</string>
    <string name="settings_general">General</string>
    <string name="settings_design">Design</string>
    <string name="settings_exp_func">Experimental functions</string>
    <string name="settings_data_usage">Data usage</string>
    <string name="settings_notif_and_sound">Notifications and sound</string>
    <string name="language">Language</string>
    <string name="help_privacy_policy">Privacy policy</string>
    <string name="help_contacts">Contacts</string>
    <string name="help_frequent_questions">Frequent Questions</string>
    <string name="back_btn">Back</string>
    <string name="add_week_btn">Add new schedule</string>
    <string name="dots">Dots</string>
    <string name="import_item">Import</string>
    <string name="export_item">Export</string>
    <string name="tasks">Tasks</string>
    <string name="new_task">New task</string>
</resources>